[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pictomancer"
version = "0.1.0"
description = "Python SDK for Pictomancer.ai — image processing for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Pictomancer.ai", email = "hello@pictomancer.ai" }]
keywords = ["image-processing", "mcp", "ai-agents", "x402", "pictomancer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
all = ["pictomancer[langchain]"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
]

[project.urls]
Homepage = "https://pictomancer.ai"
Documentation = "https://api.pictomancer.ai/docs"
Repository = "https://github.com/pictomancer/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/pictomancer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
