[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pictomancer"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/pictomancer"]

[tool.hatch.build.targets.sdist]
exclude = ["/.venv", "/.tmpvenv", "/.pytest_cache", "/.git"]
